# CopilotX

./: .gitignore  LICENSE  README.md  pyproject.toml  test_remote.sh
deploy/: .env.example  Caddyfile  copilotx-azureuser.service  copilotx.service  nginx-copilotx-http.conf  nginx-copilotx.conf
src/copilotx/: __init__.py  __main__.py  cli.py  config.py
src/copilotx/auth/: __init__.py  oauth.py  storage.py  token.py
src/copilotx/proxy/: __init__.py  client.py  responses_stream.py  streaming.py  translator.py
src/copilotx/server/: __init__.py  app.py  routes_anthropic.py  routes_models.py  routes_openai.py  routes_responses.py
tests/: test_tools_translation.py
